# blogus

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.blogus/: .gitignore  config.yaml
.github/workflows/: ci.yml  publish.yml
blogus/: __init__.py
blogus-ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
blogus-ui/src/: App.vue  main.ts
blogus-ui/src/assets/: app.css
blogus-ui/src/components/layout/: AppHeader.vue  AppSidebar.vue
blogus-ui/src/components/ui/: NavItem.vue
blogus-ui/src/router/: index.ts
blogus-ui/src/services/: api.ts
blogus-ui/src/stores/: deployments.ts  prompts.ts  templates.ts
blogus-ui/src/types/: index.ts
blogus-ui/src/views/: AnalyzePage.vue  CreateDeploymentPage.vue  CreateTemplatePage.vue  DeploymentDetailPage.vue  DeploymentsPage.vue  ExecutePage.vue  HomePage.vue  NotFoundPage.vue  PromptStudioPage.vue  PromptsPage.vue  ScanResultsPage.vue  TemplateDetailPage.vue  TemplatesPage.vue  TestPage.vue
blogus/application/: __init__.py  dto.py
blogus/application/services/: __init__.py  prompt_service.py  registry_service.py  template_service.py
blogus/domain/: __init__.py
blogus/domain/models/: __init__.py  analysis.py  comparison.py  execution.py  prompt.py  registry.py  template.py  testing.py
blogus/domain/services/: __init__.py  comparison_engine.py  detection_engine.py  prompt_analyzer.py  prompt_parser.py  template_manager.py  version_engine.py
blogus/infrastructure/: __init__.py  container.py
blogus/infrastructure/config/: __init__.py  settings.py
blogus/infrastructure/database/: __init__.py  config.py  models.py  repositories.py
blogus/infrastructure/git/: __init__.py  repo.py
blogus/infrastructure/llm/: __init__.py  litellm_provider.py
blogus/infrastructure/observability/: __init__.py  instrumented_service.py  tracing.py
blogus/infrastructure/parsers/: __init__.py  js_parser.py  python_parser.py
blogus/infrastructure/storage/: __init__.py  file_repositories.py
blogus/interfaces/: __init__.py
blogus/interfaces/cli/: __init__.py  main.py
blogus/interfaces/cli/commands/: __init__.py  analyze.py  demo.py  exec.py  init.py  prompts.py  registry.py  scan.py  templates.py
blogus/interfaces/tui/: __init__.py  app.py  demo_runner.py
blogus/interfaces/tui/demo_data/: __init__.py  setup.py
blogus/interfaces/tui/screens/: __init__.py  analyze.py  compare.py  dashboard.py  fix_workflow.py  scan.py  summary.py  welcome.py
blogus/interfaces/tui/styles/: demo.tcss
blogus/interfaces/tui/widgets/: __init__.py  comparison_panel.py  diff_view.py  logo.py  score_gauge.py
blogus/interfaces/web/: __init__.py  container.py  main.py
blogus/interfaces/web/routers/: __init__.py  prompt_files.py  prompts.py  registry.py  templates.py
blogus/shared/: exceptions.py  logging.py
data/: blogus.db
docs/: README.md  cli.md  contributing.md  core_concepts.md  getting_started.md  prompt_files.md  web_interface.md
documentation/: mkdocs.yml
documentation/docs/: advanced-features.md  cli-reference.md  configuration.md  examples.md  getting-started.md  index.md  models.md  prompt-format.md  python-library.md  troubleshooting.md
documentation/docs/stylesheets/: extra.css
examples/: README.md  basic_analysis.py  basic_usage.py  cross_model.py  template_management.py  test_generation.py
migrations/models/: 0_20251126000242_init.py
prompts/: code-review.prompt  sql-generator.prompt  summarize.prompt
tests/: COVERAGE.md  test_application.py  test_cli.py  test_container.py  test_detection_engine.py  test_domain.py  test_domain_services.py  test_infrastructure.py  test_interfaces.py  test_llm_provider.py  test_prompt_files.py  test_registry.py  test_registry_service.py  test_version_engine.py  test_web_api.py
