[tool.poetry]
name = "blogus"
version = "0.2.0"
description = "A comprehensive library for crafting, analyzing, and perfecting AI prompts with advanced features"
authors = ["Dipankar Sarkar <me@dipankar.name>"]
readme = "README.md"
homepage = "https://github.com/terraprompt/blogus"
repository = "https://github.com/terraprompt/blogus"
keywords = ["ai", "prompts", "llm", "analysis", "testing", "templates", "batch-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "blogus" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { version = "^0.115.0", optional = true }
uvicorn = { version = "^0.30.6", optional = true }
anthropic = "^0.34.2"
openai = "^1.0.0"
groq = "^0.11.0"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
jinja2 = { version = "^3.1.5", optional = true }
click = "^8.1.7"
litellm = "^1.40.0"
pyyaml = "^6.0.1"
aiofiles = { version = "^24.1.0", optional = true }

[tool.poetry.extras]
web = ["fastapi", "uvicorn", "jinja2", "aiofiles"]
all = ["fastapi", "uvicorn", "jinja2", "aiofiles"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pre-commit = "^3.5.0"
black = "^24.8.0"
flake8 = "^7.1.1"
mypy = "^1.11.2"

[tool.poetry.scripts]
blogus = "blogus.interfaces.cli.main:cli"
blogus-web = "blogus.interfaces.web.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
strict = true
